objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>APTPS_Purpose_of_Loan__c</fullName>
        <label>Purpose of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>APTPS_IS_Production_Use__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Contract Defined</fullName>
                </value>
                <value>
                    <fullName>Technology Migration</fullName>
                </value>
                <value>
                    <fullName>Technology Workaround</fullName>
                </value>
                <value>
                    <fullName>Repackaging Workaround</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales Proliferation</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Complementary Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Reasons_Request__c</fullName>
        <description>Business Reasons for Request (Detailed description of the purpose)</description>
        <inlineHelpText>Detailed description of the purpose</inlineHelpText>
        <label>Business Reasons for Request</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_Regenerate__c</fullName>
        <formula>IF( AND(($Profile.Name!= &apos;4_4 - Legal&apos;),($Profile.Name!= &apos;4_4 - Legal_Apttus&apos;),($Profile.Name!= &apos;4_4 - Legal_ApttusClone&apos;),($Profile.Name!= &apos;4_4 - LegalApttus&apos;),($Profile.Name!= &apos;4_4 - LegalApttusClone&apos;),(APTPS_CLLA_Disable_Generate_Button__c==false),OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Filing&quot;))) , 
HYPERLINK(&quot;apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Regenerate&quot;, &quot;Regenerate&quot;), &quot;_self&quot;), 

IF( OR(($Profile.Name== &apos;4_4 - Legal&apos;),($Profile.Name== &apos;4_4 - Legal_Apttus&apos;),($Profile.Name== &apos;4_4 - Legal_ApttusClone&apos;),($Profile.Name== &apos;4_4 - LegalApttus&apos;),($Profile.Name== &apos;4_4 - LegalApttusClone&apos;))&amp;&amp; (APTPS_CLLA_Disable_Generate_Button__c==false) &amp;&amp;(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Filing&quot;))),
HYPERLINK(&quot;apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Regenerate&quot;, &quot;Regenerate&quot;), &quot;_self&quot;), 
null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regenerate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_Relevant_Information_Loan__c</fullName>
        <inlineHelpText>&quot;Is there any other relevant information or special circumstances related to this loan?
If Yes, explain:&quot;</inlineHelpText>
        <label>Relevant Loan Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_Revenue_based_arrangement__c</fullName>
        <description>A &quot;revenue-based arrangement&quot; is any sale of products or services to this customer (or any of its related entities) in the last 60 days.</description>
        <inlineHelpText>Has there been a revenue-based arrangement with this customer in the last 60 days?</inlineHelpText>
        <label>Revenue Based Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Select_BSLA_SPLA__c</fullName>
        <description>CLLA-Select BSLA / SPLA exhibit generation option</description>
        <inlineHelpText>Select BSLA / SPLA exhibit generation option</inlineHelpText>
        <label>Use existing Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Select_incoterms__c</fullName>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EXW  EX Works</fullName>
                </value>
                <value>
                    <fullName>DAP Deliver at Place</fullName>
                </value>
                <value>
                    <fullName>DDP Delivered Duty Paid</fullName>
                </value>
                <value>
                    <fullName>DAT Delivered at Terminal</fullName>
                </value>
                <value>
                    <fullName>FOB Free on Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Select_internal_external_customer__c</fullName>
        <label>Internal/External Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Shipping_Address__c</fullName>
        <inlineHelpText>Shipping address for Internal Customer</inlineHelpText>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTPS_Shipping__c</fullName>
        <label>Shipping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-site, no shipment required</fullName>
                </value>
                <value>
                    <fullName>To be shipped to Customer address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Special_legal_assistance__c</fullName>
        <description>Do you need special legal assistance for this request?</description>
        <inlineHelpText>Do you need special legal assistance for this request?</inlineHelpText>
        <label>Special Legal Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_Storing_and_Returning_Crate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Storing and returning the crate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTPS_TK_License_sent_VAR_Email__c</fullName>
        <inlineHelpText>Temp Key Licence to be sent to VAR Email.</inlineHelpText>
        <label>License to (email)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_TK_License_sent_VAR_Name__c</fullName>
        <inlineHelpText>Tempkey License to be sent to VAR Name.</inlineHelpText>
        <label>License to (Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_TK_License_sent_outside_Email__c</fullName>
        <inlineHelpText>Temp Key Licence sent outside of VAR Email.</inlineHelpText>
        <label>End User (email)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_TK_License_sent_outside_Name__c</fullName>
        <inlineHelpText>Tempkey License to be sent to - outside of VAR Name</inlineHelpText>
        <label>End User (Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_TK_Requestor_VAR_Email__c</fullName>
        <inlineHelpText>Temp Key Requestor of VAR Email.</inlineHelpText>
        <label>Requestor (email)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_Temp_Key_Days_Count__c</fullName>
        <description>Temp Key Total Number of Days.</description>
        <inlineHelpText>Temp Key Total Number of Days.</inlineHelpText>
        <label>Temp Key Total Number of Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTPS_Temp_Key_Requestor_of_VAR_Name__c</fullName>
        <inlineHelpText>Temp Key Requestor of VAR Name.</inlineHelpText>
        <label>Requestor (Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTPS_VAR_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAR Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner-Account</value>
            </filterItems>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account.Export_Screening_Status__c</field>
                <operation>equals</operation>
                <value>No Match</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (VAR Name)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTPS_What_will_be_method_of_training__c</fullName>
        <label>Training Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Training</fullName>
                </value>
                <value>
                    <fullName>At Licensee’s Designated Site</fullName>
                </value>
                <value>
                    <fullName>On-line</fullName>
                </value>
                <value>
                    <fullName>Through electronic media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_keys_delivered_directly__c</fullName>
        <description>If you are delivering software keys, do you want the keys delivered directly to the customer?</description>
        <inlineHelpText>If you are delivering software keys, do you want the keys delivered directly to the customer?</inlineHelpText>
        <label>Keys Delivered to Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTPS_you_certify_info_provided_is_true__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. By submitting this information, you certify that the information that you have provided is true and accurate, and is consistent with the Integrity and Confidentiality of Assets and Information section of the Cadence Code of Business Conduct.</description>
        <inlineHelpText>1. By submitting this information, you certify that the information that you have provided is true and accurate, and is consistent with the Integrity and Confidentiality of Assets and Information section of the Cadence Code of Business Conduct.</inlineHelpText>
        <label>You certify, the info provided is true?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Account_Executive_Name__c</fullName>
        <formula>APTPS_Approval_Hierarchy__r.Employee_Name__r.FirstName + &apos; &apos; +  APTPS_Approval_Hierarchy__r.Employee_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Division_Name__c</fullName>
        <description>This field store Division Name for Samsung account.</description>
        <label>Division Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Parent_Account_Name__c</fullName>
        <formula>Apttus__Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARM_Access_End_Date__c</fullName>
        <description>This date will start the ARM Access End Flow. It can&apos;t be greater than ETAA Agreement End Date.</description>
        <label>ARM Access End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AX__c</fullName>
        <formula>IF(APTPS_Approval_Hierarchy__r.Employee_Name__r.Id = $User.Id, true , false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_End_Date__c</fullName>
        <label>When will this restriction expire ?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccountName_Parent_Account_String__c</fullName>
        <formula>Apttus__Account__r.Parent.Name</formula>
        <label>AccountName Parent Account String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName_String__c</fullName>
        <formula>Apttus__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Email__c</fullName>
        <description>This Field will be updated by workflow only.</description>
        <label>Account Executive Email</label>
        <type>Email</type>
    </fields>
	<fields>
        <fullName>Acquisition_or_change_in_control__c</fullName>
        <label>Acquisition or change in control</label>
        <picklist>
            <picklistValues>
                <fullName>Cadence customer will be integrated into Other Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence customer will exist (under a new parent company&apos;s control)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadence customer will no longer exist and has no employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activate_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger Intel RUNDA workflow</description>
        <label>User Initiated Start of RUNDA DA Closure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activated_DateTime__c</fullName>
        <label>Activated DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Extend_Date__c</fullName>
        <label>Agreement Extend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Requester_Name__c</fullName>
        <formula>Apttus__Requestor__r.FirstName + &apos; &apos; + Apttus__Requestor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Requester Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Type_Derived__c</fullName>
        <formula>IF(CONTAINS(Product_Type_and_Sub_Type__c,&quot;Software&quot;),&quot;CLLA-&quot;+SUBSTITUTE(Product_Type_and_Sub_Type__c,&quot;Software&quot;,&quot;SW&quot;),
IF(CONTAINS(Product_Type_and_Sub_Type__c,&quot;DesignIP&quot;),&quot;CLLA-&quot;+SUBSTITUTE(Product_Type_and_Sub_Type__c,&quot;DesignIP&quot;,&quot;DIP&quot;),&quot;CLLA-&quot;+Product_Type_and_Sub_Type__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement_Type_Derived</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Employee_Has_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Emps have removed confidential info?</label>
        <type>Checkbox</type>
    </fields>
 	<fields>
        <fullName>Applicable_For_COD_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicable For COD Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>		
       <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__LineItem_Approval_Status__c</fullName>
        <description>The overall approval status for line items associated with the agreement</description>
        <inlineHelpText>The overall approval status for line items associated with the agreement</inlineHelpText>
        <label>Line Item Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Term_Exception_Approval_Status__c</fullName>
        <description>This field denotes the overall approval status for agreement term exceptions associated with the agreement.</description>
        <inlineHelpText>This field denotes the overall approval status for agreement term exceptions associated with the agreement.</inlineHelpText>
        <label>Term Exception Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Echosign__Send_For_eSignature__c</fullName>
        <description>Send document to external party using EcoSign integration</description>
        <formula>IF(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), (AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status__c,&quot;Ready for Signatures&quot;))), (AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status__c,&quot;Signature Declined&quot;)))),HYPERLINK(&quot;/apex/Apttus_Echosign__SelectAttachment?targetPageURL=/apex/Apttus_Echosign__EchoSignInfoEdit&amp;id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Echosign__eSignature&quot;,&quot;Send To Other Party For eSignatures&quot;), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send For eSignature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Account_Search_Field__c</fullName>
        <description>This field is used in the side bar search</description>
        <externalId>true</externalId>
        <label>Account Search Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The link to the account record to identify the external party to this agreement</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N50000001Xl0UEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Activated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who activated the agreement in the system</description>
        <label>Activated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>APTS_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Activated_Date__c</fullName>
        <description>The date the agreement was activated in the system</description>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Category__c</fullName>
        <description>Used to categorize agreement types.  When setting up a new agreement type make sure to seect approrpiate values for that agreement type and to set the right default</description>
        <label>Agreement Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Number__c</fullName>
        <description>FOR INTERNAL USE ONLY. DO NOT USE IN SCREENS, REPORTS, ETC.</description>
        <label>Agreement Number_Num (INTERNAL)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AllowableOutputFormats__c</fullName>
        <description>The list of output formats allowed for the agreement.</description>
        <inlineHelpText>The list of output formats allowed for the agreement.</inlineHelpText>
        <label>Allowable Output Formats</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>RTF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Amendment_Effective_Date__c</fullName>
        <description>The date this amendment is effective</description>
        <label>Amendment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renew_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether consent is required to extend / renew this agreement</description>
        <label>Renewal Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renew_Term_Months__c</fullName>
        <description>The number of months to extend the agreement</description>
        <label>Renewal Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renewal_Terms__c</fullName>
        <description>Specifies any terms for renewal</description>
        <label>Renewal Terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the agreement has an auto renewal provision</description>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Corporate Business Hours associated with the agreement</description>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Company_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to contact record to identify internal signatory</description>
        <label>Company Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N50000001Xl0CEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Company_Signed_Date__c</fullName>
        <description>Date when internal signatory signed</description>
        <label>Company Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Company_Signed_Title__c</fullName>
        <description>Title of person signing on behalf of Company</description>
        <label>Company Signed Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_Duration_Days__c</fullName>
        <description>The duration from Start Date to End Date in days</description>
        <formula>IF(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;), (Apttus__Contract_End_Date__c &gt;= Apttus__Contract_Start_Date__c)),  (Apttus__Contract_End_Date__c - Apttus__Contract_Start_Date__c) + 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_End_Date__c</fullName>
        <description>The end date for this agreement</description>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_Number__c</fullName>
        <description>The system assigned unique agreement number.  FOR INTERNAL USE ONLY.  DO NOT SHOW IN SCREENS, REPORTS, ETC.</description>
        <displayFormat>{00000000}</displayFormat>
        <label>Agreement Number_Auto (INTERNAL)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_Start_Date__c</fullName>
        <description>The effective date of the agreement</description>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Contracted_Days__c</fullName>
        <description>Days from Contract Start Date to Current Date if the contract is In Effect and Start Date is set.</description>
        <formula>IF(AND(NOT(ISNULL(Apttus__Contract_Start_Date__c )), ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;)), (TODAY() - Apttus__Contract_Start_Date__c ) + 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracted Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Detailed description of this agreement</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Executed_Copy_Mailed_Out_Date__c</fullName>
        <description>Date the final, executed copy was mailed to the other party</description>
        <label>Executed Copy Mailed Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Agreement_Number__c</fullName>
        <description>Identifies the agreement number, including the version number.  Use this field to display on screens, reports, dashboards, search filters and columns, etc.  The other agreement number fields are for internal use only.</description>
        <formula>Apttus__Agreement_Number__c  &amp; &quot;.&quot; &amp;  TEXT(CEILING(Apttus__Version_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Amend__c</fullName>
        <description>Amend the agreement</description>
        <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)))), HYPERLINK(&quot;/apex/Apttus__AgreementAmend?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Amend&quot;, &quot;Amend&quot;),&quot;_self&quot;),NULL)</formula>
        <inlineHelpText>Amend the agreement</inlineHelpText>
        <label>Amend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Cancel_Request__c</fullName>
        <description>Cancel the agreement request</description>
        <formula>IF (AND(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;Request&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Filing&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;Cancelled Request&quot;))), HYPERLINK(&quot;/apex/Apttus__AgreementCancel?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_CancelRequest&quot;, &quot;Cancel Request&quot;), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cancel the agreement request</inlineHelpText>
        <label>Cancel Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Execute__c</fullName>
        <description>Activates the agreement</description>
        <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Filing&quot;), AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(Apttus__Source__c,&quot;Other Party Paper&quot;))), HYPERLINK(&quot;/apex/Apttus__AgreementActivate?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Activate&quot;, &quot;Activate&quot;),&quot;_self&quot;),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Activates the agreement</inlineHelpText>
        <label>Activate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Expire__c</fullName>
        <description>Expire the agreement</description>
        <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)))), HYPERLINK(&quot;/apex/Apttus__AgreementExpire?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Expire&quot;, &quot;Expire&quot;),&quot;_self&quot;), NULL)</formula>
        <inlineHelpText>Expire the agreement</inlineHelpText>
        <label>Expire</label>
        <type>Text</type>
    </fields>
</CustomObject>